--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.kotlin_version = '1.8.0' // ตรวจสอบให้แน่ใจว่าเวอร์ชัน Kotlin ตรงกับที่คุณใช้งาน
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.0' // ตรวจสอบให้แน่ใจว่าเวอร์ชันตรงกับที่คุณใช้งาน
+        classpath 'com.google.gms:google-services:4.3.15' // Firebase plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
