--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   geolocator: ^8.2.0
   http: ^0.13.4
   intl: ^0.17.0
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.20.0  # ลดเวอร์ชันลง
+  cloud_firestore: ^4.9.0
 
 
 
