--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,12 +34,13 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.example.project"
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutterVersionCode.toInteger()
-        versionName = flutterVersionName
-    }
+    applicationId "com.example.project" // ตรงนี้ต้องไม่มีเครื่องหมาย "="
+    minSdkVersion flutter.minSdkVersion
+    targetSdkVersion flutter.targetSdkVersion
+    versionCode flutterVersionCode.toInteger()
+    versionName flutterVersionName
+}
+
 
     buildTypes {
         release {
@@ -57,7 +58,8 @@ apply plugin: 'com.google.gms.google-services'
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.1.0') // Use the latest Firebase BoM version
-    implementation 'com.google.firebase:firebase-analytics' // Example Firebase SDK
-    implementation 'com.google.firebase:firebase-auth' // Example Firebase Authentication SDK
-    // Add other Firebase dependencies here as needed
+    implementation 'com.google.firebase:firebase-analytics' // Analytics SDK
+    implementation 'com.google.firebase:firebase-auth' // Authentication SDK
+    implementation 'com.google.firebase:firebase-firestore' // Firestore SDK
 }
+
