--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^2.11.0
   firebase_auth: ^4.20.0  # ลดเวอร์ชันลง
   cloud_firestore: ^4.9.0
+  provider: ^6.0.0
 
 
 
